Fixed spacing issue, all relevant controls and displays should now fit in window on any reasonable sized screen and visualizaitons are all (at least to the naked eye) centered. May need to find a way to make a little more room for or around the barcharts.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,7 +118,8 @@ body {
 
 #city-search {
 	font-family: "Helvetica Neue",helvetica,arial,sans-serif;
-	margin-top: 20px;
+	margin-top: 5px;
+	visibility: hidden;
 }
 
 #search-val {
